[package]
name = "xla"
version = "0.1.0"
edition = "2024"
description = "Rust bindings to XLA's C++ API"

[features]
shared = []

[dependencies]
anyhow = "1.0.28"
flate2 = "1.1.4"
tar = "0.4.40"
ureq = "2.9.7"
zip = "2.1.3"

[build-dependencies]
anyhow = "1.0.28"
flate2 = "1.1.4"
tar = "0.4.40"
ureq = "2.9.7"
zip = "2.1.3"
