[package]
name = "xla"
version = "0.1.0"
edition = "2024"
build = "build.rs"
description = "Rust bindings to XLA's C++ API"

[features]
shared = []

[dependencies]
anyhow = "1.0.28"
cc = "1.0"
flate2 = "1.1.4"
tar = "0.4.40"
cpp_build = "0.5.9"
ureq = "2.9.7"
zip = "2.1.3"

thiserror = { version = "2.0", default-features = false }
libc = "0.2"
num-traits = "0.2"
num-derive = "0.4"
cpp = "0.5.9"
cxx = "1.0"
zerocopy.version = "0.8"
zerocopy.features = ["derive"]
lapack-sys = "0.14.0"

[build-dependencies]
anyhow = "1.0.28"
cc = "1.0"
flate2 = "1.1.4"
tar = "0.4.40"
cpp_build = "0.5.9"
ureq = "2.9.7"
zip = "2.1.3"
